get current weather forecasting

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="small-12 columns">
                         <p>weather infomation</p>
                         <input id="sCity" type="text" placeholder="Search City" value="hamilton">
-                        <button type="submit" onclick="getWeather()" class="button">Search Now !</button>
+                        <button type="submit" onclick="getWForeCasting()" class="button">Search Now !</button>
                     </div>
                 </div>
             </div>
